Sua file de tao conflict

--- a/3.html
+++ b/3.html
@@ -210,7 +210,7 @@ Sau đám tang Hiệu trưởng Albus Dumbledore, Harry, Ron và Hermione chuầ
             <address>
                 <ul>
                     <li>0123456789</li>
-                    <li>208phuluan@gmail.com</li>
+                    <li>gmo-z@gmail.com</li>
                 </ul>
         </fieldset>
     </div>
